--- a/4-Delice des sens.html
+++ b/4-Delice des sens.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
     <title>ohmyfood</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 
@@ -22,115 +22,117 @@
     </header>
 
     <section class="bigcards">
-        <img src="images/restaurants/4-Délice_des_sens.jpg" alt="photo montrant un plat gastronomique" />
+        <img src="images/restaurants/4-Delice_des_sens.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture" />
 
         <div class="composition">
-            <h2 class="composition--title">Le délice des sens</h2>
+            <h2 class="composition--title">Le délice des sens
+                <i class="far fa-heart fa-lg"></i>
+            </h2>
 
             <div class="palette__entry">
-                <h2 class="palette--title">Entrées</h2>
+                <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
                 <div class="palette__cards">
-                    <a href="#">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Tartare de thon</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Assaisonné au yuzu</p>
-                            <p class="descriptive--details">25€</p>
+                            <p class="descriptive--price">25€</p>
                         </div>
                     </a>
                 </div>
 
-                <div class="palette_cards">
-                    <a href="#">
+                <div class="palette__cards">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Bouchée de homard croustillant</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Et sa farandole de petits légumes</p>
-                            <p class="descriptive--details">35€</p>
+                            <p class="descriptive--price">35€</p>
                         </div>
                     </a>
                 </div>
 
-                <div class="palette_cards">
-                    <a href="#">
+                <div class="palette__cards">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Velouté de cèpes</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Aux truffes</p>
-                            <p class="descriptive--details">20€</p>
+                            <p class="descriptive--price">20€</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="palette__dishes">
-                    <h2 class="palette--title">Plats</h2>
+                    <h2 class="palette--title"><span class="underline">Plat</span>s</h2>
 
-                    <div class="palette_cards">
-                        <a href="#">
+                    <div class="palette__cards">
+                        <a href="#" class="palette--link">
                             <h2 class="dish__name">Poulet rôti aux herbes de provence</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Et sa crème de truffe</p>
-                                <p class="descriptive--details">40€</p>
+                                <p class="descriptive--price">40€</p>
                             </div>
                         </a>
                     </div>
 
-                    <div class="palette_cards">
-                        <a href="#">
+                    <div class="palette__cards">
+                        <a href="#" class="palette--link">
                             <h2 class="dish__name">Langouste rôtie</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Et ses légumes de saison</p>
-                                <p class="descriptive--details">35€</p>
+                                <p class="descriptive--price">35€</p>
                             </div>
                         </a>
                     </div>
 
-                    <div class="palette_cards">
-                        <a href="#">
+                    <div class="palette__cards">
+                        <a href="#" class="palette--link">
                             <h2 class="dish__name">Côte de boeuf angus</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Et sa purée de panais</p>
-                                <p class="descriptive--details">44€</p>
+                                <p class="descriptive--price">44€</p>
                             </div>
                         </a>
                     </div>
 
                     <div class="palette__desserts">
-                        <h2 class="palette--title">Desserts</h2>
+                        <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
-                        <div class="palette_cards">
-                            <a href="#">
+                        <div class="palette__cards">
+                            <a href="#" class="palette--link">
                                 <h2 class="dish__name">Farandole de desserts</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Du chef</p>
-                                    <p class="descriptive--details">18€</p>
+                                    <p class="descriptive--price">18€</p>
                                 </div>
                             </a>
                         </div>
 
-                        <div class="palette_cards">
-                            <a href="#">
+                        <div class="palette__cards">
+                            <a href="#" class="palette--link">
                                 <h2 class="dish__name">Crème brulée</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Revisitée</p>
-                                    <p class="descriptive--details">22€</p>
+                                    <p class="descriptive--price">22€</p>
                                 </div>
                             </a>
                         </div>
 
-                        <div class="palette_cards">
-                            <a href="#">
+                        <div class="palette__cards">
+                            <a href="#" class="palette--link">
                                 <h2 class="dish__name">Tiramisu</h2>
                                 <div class="descriptive">
-                                    <p class="descriptive--details">à la noisette</p>
-                                    <p class="descriptive--details">23€</p>
+                                    <p class="descriptive--details">À la noisette</p>
+                                    <p class="descriptive--price">23€</p>
                                 </div>
                             </a>
                         </div>
-                    </div>
 
                     <div class="order__buton">
-                        Commander
+                        <p>Commander</p>
                     </div>
 
+                    </div>
                 </div>
             </div>
         </div>
