--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <h2 class="introduction--title"> Réservez le menu qui vous convient</h2>
         <p class="introduction--describe">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        
+
         <button class="introduction__buton">
             Explorer nos restaurants
         </button>
@@ -56,7 +56,7 @@
         <h2 class="menu--title">Restaurants</h2>
 
             <article class="menu__cards">
-                <a href="1-Palette du gout.html" class="menu__cards--link">
+                <a href="1-palette_du_gout.html" class="menu__cards--link">
                     <img src="images/restaurants/1-Palette_du_gout.jpg" alt="photo montrant un plat gastronomique" 
                     class="menu__cards--size"/>
                     <h2 class="menu__cards--title">La palette du goût</h2>
@@ -70,7 +70,7 @@
             </article>      
 
             <article class="menu__cards">
-                <a href="2-La note enchantee.html" class="menu__cards--link">
+                <a href="2-la_note_enchantee.html" class="menu__cards--link">
                     <img src="images/restaurants/2-Note_enchantee.jpg" alt="photo montrant un plat gastronomique" 
                     class="menu__cards--size" />
                     <h2 class="menu__cards--title">La note enchantée</h2>
@@ -84,7 +84,7 @@
             </article>
         
             <article class="menu__cards">
-                <a href="3-A la Francaise.html" class="menu__cards--link">
+                <a href="3-a_la_francaise.html" class="menu__cards--link">
                     <img src="images/restaurants/3-A la_francaise.jpg" alt="photo montrant un plat gastronomique" 
                     class="menu__cards--size"/>
                     <h2 class="menu__cards--title">A la française</h2>
@@ -97,7 +97,7 @@
             </article>
 
             <article class="menu__cards">
-                <a href="4-Delice des sens.html" class="menu__cards--link">
+                <a href="4-delice_des_sens.html" class="menu__cards--link">
                     <img src="images/restaurants/4-Delice_des_sens.jpg" alt="photo montrant un plat gastronomique"
                     class="menu__cards--size" />
                     <h2 class="menu__cards--title">Le délice des sens</h2>
