--- a/1-palette_du_gout.html
+++ b/1-palette_du_gout.html
@@ -33,7 +33,7 @@
             <div class="palette__entry">
                 <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
-                <div class="palette__cards delay">
+                <div class="palette__cards delay--one">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Fricassée d'escargot</h2>
                         <div class="descriptive">
@@ -43,7 +43,7 @@
                     </a>
                 </div>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay--two">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Foie gras de canard mi-cuit</h2>
                         <div class="descriptive">
@@ -53,7 +53,7 @@
                     </a>
                 </div>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay--three">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Oeuf au plat</h2>
                         <div class="descriptive">
@@ -66,7 +66,7 @@
                 <div class="palette__dishes">
                     <h2 class="palette--title"><span class="underline">Plat</span>s</h2>
 
-                    <div class="palette__cards">
+                    <div class="palette__cards delay--one">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Filet de boeuf aux herbes</h2>
                             <div class="descriptive">
@@ -76,7 +76,7 @@
                         </a>
                     </div>
 
-                    <div class="palette__cards">
+                    <div class="palette__cards delay--two">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Parmentier de queue de boeuf</h2>
                             <div class="descriptive">
@@ -86,7 +86,7 @@
                         </a>
                     </div>
 
-                    <div class="palette__cards">
+                    <div class="palette__cards delay-three">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Filet de Turbot</h2>
                             <div class="descriptive">
@@ -99,7 +99,7 @@
                     <div class="palette__desserts">
                         <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
-                        <div class="palette__cards">
+                        <div class="palette__cards delay-one">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Paris-Brest</h2>
                                 <div class="descriptive">
@@ -109,7 +109,7 @@
                             </a>
                         </div>
 
-                        <div class="palette__cards">
+                        <div class="palette__cards delay--two">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Macaron au chocolat d'exception</h2>
                                 <div class="descriptive">
@@ -119,7 +119,7 @@
                             </a>
                         </div>
 
-                        <div class="palette__cards">
+                        <div class="palette__cards delay--three">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Mousse au chocolat</h2>
                                 <div class="descriptive">
